Practical/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\Java\jdk1.8.0_101\bin\javadoc.exe
-author
-version
-nodeprecated
-private
-tag
pre:a:Precondition:
-tag
post:a:Postcondition:
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\leJOS NXJ\lib\nxt\classes.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\jjlowe\Desktop\GitHub\lego-nullpoint-error\Practical
-d
C:\Users\jjlowe\Desktop\GitHub\lego-nullpoint-error\Practical\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\jjlowe\Desktop\GitHub\lego-nullpoint-error\Practical\UltrasonicSense.java
<---- end of javadoc command ---->
Loading source file C:\Users\jjlowe\Desktop\GitHub\lego-nullpoint-error\Practical\UltrasonicSense.java...
Constructing Javadoc information...
Standard Doclet version 1.8.0_101
Building tree for all the packages and classes...
Generating C:\Users\jjlowe\Desktop\GitHub\lego-nullpoint-error\Practical\doc\UltrasonicSense.html...
C:\Users\jjlowe\Desktop\GitHub\lego-nullpoint-error\Practical\Main.java:4: error: cannot find symbol
public class Main implements Touch{
                             ^
  symbol: class Touch
Generating C:\Users\jjlowe\Desktop\GitHub\lego-nullpoint-error\Practical\doc\package-frame.html...
Generating C:\Users\jjlowe\Desktop\GitHub\lego-nullpoint-error\Practical\doc\package-summary.html...
Generating C:\Users\jjlowe\Desktop\GitHub\lego-nullpoint-error\Practical\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating C:\Users\jjlowe\Desktop\GitHub\lego-nullpoint-error\Practical\doc\allclasses-frame.html...
Generating C:\Users\jjlowe\Desktop\GitHub\lego-nullpoint-error\Practical\doc\allclasses-noframe.html...
Generating C:\Users\jjlowe\Desktop\GitHub\lego-nullpoint-error\Practical\doc\index.html...
Generating C:\Users\jjlowe\Desktop\GitHub\lego-nullpoint-error\Practical\doc\stylesheet.css...
Note: Custom tags that could override future standard tags:  @pre, @post. To avoid potential overrides, use at least one period character (.) in custom tag names.
Note: Custom tags that were not seen:  @pre, @post
1 error
